kubernetes/anonymiser-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-anonymiser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-anonymiser
  template:
    metadata:
      name: dc-anonymiser
      labels:
        app: dc-anonymiser
    spec:
      containers:
      - name: dc-anonymiser
        image: oydeu/dc-anonymiser:latest
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: dc-anonymiser
spec:
  selector:
    app: dc-anonymiser
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dc-anonymiser
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - anonymiser.ownyourdata.eu
    secretName: dc-anonymiser-tls
  rules:
  - host: anonymiser.ownyourdata.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dc-anonymiser
            port:
              number: 80
